--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.5.0",
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -21,6 +21,14 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "admin-lte": "3.0.0-alpha.2"
+        "@moefe/vue-aplayer": "^2.0.0-beta.2",
+        "admin-lte": "3.0.0-alpha.2",
+        "bootstrap-vue": "^2.0.0-rc.11",
+        "laravel-vue-pagination": "^2.2.0",
+        "moment": "^2.22.2",
+        "sweetalert2": "^7.29.1",
+        "vform": "^1.0.0",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.0.1"
     }
 }
